--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Bootstrap 4 Starter</title>
+		<title>Bootstrap 4 - Off Canvas Menu</title>
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,45 @@
 
 	</head>
 	<body>
-
+	<!-- Container Starts -->
+		<div class="container pt-5">
+		<!-- Main Menu Starts -->
+			<nav id="main-menu" class="main-menu navbar navbar-dark bg-dark navbar-expand-md rounded-0">
+			<!-- Nested Container Starts -->
+				<div class="container px-md-0">
+				<!-- Navbar Toggler Starts -->
+					<button class="navbar-toggler ml-auto rounded-0" type="button" data-toggle="collapse" data-target=".navbar-cat-collapse" aria-controls=".navbar-cat-collapse" aria-expanded="false" aria-badge="Toggle navigation">
+						<span class="fa fa-bars"></span>
+					</button>
+				<!-- Navbar Toggler Ends -->
+				<!-- Navbar Cat collapse Starts -->
+					<div class="collapse navbar-collapse navbar-cat-collapse animation">
+					<!-- Nav Links Starts -->
+						<ul class="nav navbar-nav">
+							<li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+							<li class="nav-item"><a href="#" class="nav-link">New In</a></li>
+							<li class="nav-item"><a href="#" class="nav-link">Womens</a></li>
+							<li class="nav-item"><a href="#" class="nav-link">Mens</a></li>
+							<li class="nav-item"><a href="#" class="nav-link">Kids</a></li>
+							<li class="nav-item dropdown">
+								<a href="#" class="nav-link" data-toggle="dropdown">Sale <i class="fa fa-angle-down ml-1"></i></a>
+								<ul class="dropdown-menu rounded-0 animation" role="menu">
+									<a class="dropdown-item rounded-0" href="#">Commercial</a>
+									<a class="dropdown-item rounded-0" href="#">Gated Community</a>
+									<a class="dropdown-item rounded-0" href="#">Hospitality</a>
+									<a class="dropdown-item rounded-0" href="#">Residential</a>
+								</ul>
+							</li>
+						</ul>
+					<!-- Nav Links Ends -->
+					</div>
+				<!-- Navbar Cat collapse Ends -->
+				</div>
+			<!-- Nested Container Ends -->
+			</nav>
+		<!-- Main Menu Ends -->
+		</div>
+	<!-- Container Ends -->
 	<!-- Template JS Files -->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
