wrapper class added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 	<!-- Container Starts -->
-		<div class="container pt-5">
+		<div class="wrapper container pt-5">
 		<!-- Main Menu Starts -->
 			<nav id="main-menu" class="main-menu navbar navbar-dark bg-dark navbar-expand-md rounded-0">
 			<!-- Nested Container Starts -->
